--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <p><a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.herokuapp.com?font=Poppins&size=26&pause=1000&color=09FBFB&center=true&vCenter=true&width=435&lines=Si+funciona+no+lo+toques;Si+no+funciona+reinicia;Si+todo+falla+formatea+el+pc" alt="Typing SVG" /></a></p>
             </div>
         </section>
-    <script src="/js/script.js">
+    <script src="js/script.js">
     </script>
     </body>
 </html>
