--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="slogan">
             <div class="slogan-content">
                 <h3>Mi Lema</h3>
-                <p><a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.herokuapp.com?font=Poppins&size=26&pause=1000&color=09FBFB&center=true&vCenter=true&width=435&lines=Si+funciona+no+lo+toques;Si+no+funciona+reinicia;Si+todo+falla+formatea+el+pc" alt="Typing SVG" /></a></p>
+                <p><img src="https://readme-typing-svg.herokuapp.com?font=Poppins&size=26&pause=1000&color=09FBFB&center=true&vCenter=true&width=435&lines=Si+funciona+no+lo+toques;Si+no+funciona+reinicia;Si+todo+falla+formatea+el+pc" alt="Typing SVG" /></p>
             </div>
         </section>
     <script src="js/script.js">
