--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <nav>
                     <ul>
                         <li><a href="#home" class="active">Inico</a></li>
-                        <li><a href="#aboutme">Sobre mi</a></li>
+                        <li><a href="#aboutme">Curiosidades</a></li>
                         <li><a href="#cite" class="">Cita</a></li>
                         <li><a href="#slogan">Lema</a></li>
                     </ul>
@@ -40,9 +40,12 @@
         </section>
         <section id="aboutme">
             <div class="aboutme-content">
-                <h3>Sobre mi</h3>
-                    <h4>Mis gustos</h4>
-                    <p>Me gusta aprender sobre temas nuevos en espacial si tiene que ver con tecnologia o ciencia. Me gustan mucho los animales sobre todo las aves, en mi tiempo libre me gusta leer comics o jugar videojuegos mientras como pizza</p>
+                <h3>Curiosidades</h3>
+                    <ul>
+                        <li>Mi comida favorita es la pizza</li>
+                        <li>Me gustan mucho los animales sobre todo las aves</li>
+                        <li>en mi tiempo libre me gusta leer comics o jugar videojuegos mientras como pizza</li>
+                    </ul>
             </div>
         </section>
         <section id="cite">
