--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>   
             <div class="home-content">
                 <h1>Hola, soy <span>Jhonni</span></h1> 
-                <p>Soy estudiante de Ingeniería en Sistemas en mi quinto semestre, tengo 21 años y me apasiona aprender sobre nuevas tecnologías. En mi tiempo libre disfruto jugar videojuegos.</p>
+                <p>Soy estudiante de Ingeniería en Sistemas en mi quinto semestre, tengo 21 años y me apasiona aprender sobre nuevas tecnologías.</p>
             </div>
         </section>
         <section id="aboutme">
