--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <ul>
                         <li>Mi comida favorita es la pizza</li>
                         <li>Me gustan mucho los animales sobre todo las aves</li>
-                        <li>en mi tiempo libre me gusta leer comics o jugar videojuegos mientras como pizza</li>
+                        <li>En mi tiempo libre me gusta leer comics o jugar videojuegos mientras como pizza</li>
                     </ul>
             </div>
         </section>
